Errores reparados